--- a/动态规划-数数字.md
+++ b/动态规划-数数字.md
@@ -47,6 +47,7 @@ process.stdin.on('end', () => {
 但是一提交就发现不对劲了，数一大就运行内存限制的错误了，其实运行时间也超时了。
 
 ### 正确的解答思路一:统计法
+- 我们先计算[0, r]之间符合要求的个数，并假设r的各位只有9
 - 当n>0时，得出计算公式为pow(9, i)
 
 | 数字范围 | 满足要求的个数 |
@@ -64,3 +65,6 @@ process.stdin.on('end', () => {
 | 0-99	| 90 = 9^2 + 9^1 |
 | 0-999	| 819 = 9^3 + 9^2 + 9^1 |
 | 0-9999	| 7380 = 9^4 + 9^3 + 9^2 + 9^1 |
+
+- 得到这两个公式之后
+- 
