--- a/动态规划-数数字.md
+++ b/动态规划-数数字.md
@@ -67,13 +67,39 @@ process.stdin.on('end', () => {
 | 0-9999	| 7380 = 9^4 + 9^3 + 9^2 + 9^1 |
 
 - 为了提高代码的运行效率，可以事先将公式的计算结果写入数组中：
-- n>0时 > const f = [0, 9, 81, 729, 6561, 59049, 531441, 4782969, 43046721, 387420489];
-- n=0时 > const f = [0, 9, 90, 819, 7380, 66429, 597870, 5380839, 48427560, 435848049];
+- n>0时 
+- > const f = [0, 9, 81, 729, 6561, 59049, 531441, 4782969, 43046721, 387420489];
+```js
+function count1(){
+    let arr = new Array();
+    for(let i = 1; i < 10; i++){
+        arr.push(Math.pow(9, i));
+    }
+    console.log(arr);
+}
+```
+- n=0时 
+- > const f = [0, 9, 90, 819, 7380, 66429, 597870, 5380839, 48427560, 435848049];
+```JS
+function count0(index){
+    if(index == 1){
+        return 9;
+    }else{
+        return Math.pow(9, index) + count0(index-1);
+    }
+}
+let arr0 = new Array();
+for(let i = 1; i < 10; i++){
+    arr0.push(count0(i))
+}
+console.log(arr0);
+```
 
 - 得到这两个公式之后，我们就可以计算每一个位数上的数字所满足的数量范围。假设有一个数字是15346，n=3，那么5对应[0-5000]，则可定义数为a=5,位为b=4
 - 当n>0时，得出计算公式为:
 - > 若a>=n，(a-1)*f(b-1)
 - > 若a<n，a*f(b-1)
-- 当n=0时，得出计算公式为a*f(b-1)
+- 当n=0时，得出计算公式为
+- > a*f(b-1)
 
 
