--- a/动态规划-数数字.md
+++ b/动态规划-数数字.md
@@ -95,11 +95,79 @@ for(let i = 1; i < 10; i++){
 console.log(arr0);
 ```
 
-- 得到这两个公式之后，我们就可以计算每一个位数上的数字所满足的数量范围。假设有一个数字是15346，n=3，那么5对应[0-5000]，则可定义数为a=5,位为b=4
+- 得到这两个公式之后，我们就可以计算每一个位数上的数字所满足的数量范围。假设有一个数字是num = 15346，n=3，那么5对应[0-5000]，则可定义数为currentNum=5,位为i=1，num.length=5
 - 当n>0时，得出计算公式为:
-- > 若a>=n，(a-1)*f(b-1)
-- > 若a<n，a*f(b-1)
+- > 若currentNum>n，(currentNum-1)*f(num.length-i-1)
+- > 若currentNum=n，currentNum*f(num.length-i-1) - num.slice(index+1)
+- > 若currentNum<n，currentNum*f(num.length-i-1)
 - 当n=0时，得出计算公式为
-- > a*f(b-1)
+- > 若currentNum=0，break。（高位出现0则低位不必在计算）
+- > currentNum*f(index-1)
 
+###最终代码
+```js
+process.stdin.resume();
+process.stdin.setEncoding('utf-8');
+let input = '';
+process.stdin.on('data', (data) => {
+  input += data;
+});
+process.stdin.on('end', () => {
+    let inputArray = input.split('\n')[0].split(' ');
+    let [l, r, n]= inputArray;
+    
+    function count0(num){
+        const f = [0, 9, 90, 819, 7380, 66429, 597870, 5380839, 48427560, 435848049];
+        const str = num.toString();
+        let sum = 0;
+        for(let i = 0; i < str.length; i++){
+            // 加号+可以巧妙的将字符转换为整型
+            const currentNum = +str[i];
+            // 如果是最后一位
+            if(i === str.length - 1){
+                sum += currentNum;
+            }else if(currentNum === 0){
+                break;
+            }else{
+                const preNum = i > 0 ? +str[i - 1] : 0;
+                sum += (currentNum - preNum) * f[str.length - i - 1];
+            }
+        }
+        return sum;
+    }
+    
+    function count1(num){
+        const f = [0, 9, 81, 729, 6561, 59049, 531441, 4782969, 43046721, 387420489];
+        const str = num.toString();
+        let sum = 0;
+        for(let i = 0; i < str.length; i++){
+            const currentNum = +str[i];
+            // 如果是最后一位
+            if(i === str.length-1){
+                sum += currentNum < n ? currentNum : currentNum - 1;
+            }else if(currentNum < n){
+                sum += currentNum * f[str.length - i - 1]
+            }else if(currentNum == n){
+                //let preNum = +str.slice(i + 1);
+                sum += currentNum * f[str.length - i - 1] - 1;
+                break;
+            }else{
+                sum += (currentNum - 1) * f[str.length - i - 1];
+            }
+        }
+        
+        return sum;
+    }
+    
+    if(n == 0){
+        console.log( count0(r) - count0(l-1) );
 
+    }else{
+        console.log( count1(r) - count1(l-1) );
+        //console.log(count1(1830));
+    }
+    
+  process.exit();
+});
+
+```
