--- a/动态规划-数数字.md
+++ b/动态规划-数数字.md
@@ -96,13 +96,19 @@ console.log(arr0);
 ```
 
 - 得到这两个公式之后，我们就可以计算每一个位数上的数字所满足的数量范围。假设有一个数字是num = 15346，n=3，那么5对应[0-5000]，则可定义数为currentNum=5,位为i=1，num.length=5
-- 当n>0时，得出计算公式为:
-- > 若currentNum>n，(currentNum-1)*f(num.length-i-1)
-- > 若currentNum=n，currentNum*f(num.length-i-1) - num.slice(index+1)
-- > 若currentNum<n，currentNum*f(num.length-i-1)
-- 当n=0时，得出计算公式为
-- > 若currentNum=0，break。（高位出现0则低位不必在计算）
-- > currentNum*f(index-1)
+- 当n > 0时，得出计算公式为:
+- > 若currentNum > n，(currentNum - 1)*f(num.length - i - 1)
+- > 若currentNum = n，currentNum * f(num.length - i - 1);break;(高位出现n则低位不必再计算)
+- > 若currentNum < n，currentNum * f(num.length - i - 1)
+- 当n = 0时，得出计算公式为
+- > 若currentNum = 0，break。（高位出现0则低位不必在计算）
+- > currentNum * f(index - 1)
+- 个位数上
+- > sum += currentNum < n ? currentNum : currentNum - 1;
+- 最终通过相减计算得出最终结果
+- - 这里（l - 1）是因为取值范围在[l,r]，所以是f([l, r]) - f([1, l))，即f([l, r]) - f([1, l - 1])
+- > 当n > 0时，console.log( count1(r) - count1(l-1) );
+- > 当n = 0时，console.log( count0(r) - count0(l-1) );
 
 ###最终代码
 ```js
@@ -148,7 +154,6 @@ process.stdin.on('end', () => {
             }else if(currentNum < n){
                 sum += currentNum * f[str.length - i - 1]
             }else if(currentNum == n){
-                //let preNum = +str.slice(i + 1);
                 sum += currentNum * f[str.length - i - 1] - 1;
                 break;
             }else{
