--- a/最小质因数.md
+++ b/最小质因数.md
@@ -10,23 +10,36 @@
 输入一个整数n,(1<n<=100），测试包含组样例，读到文件末尾结束。
 ## 输出
 输出求1至n的最小公倍数。
+## 样例
+```
+输入样例 1
 
+6
+10
+100
+
+输出样例 1
+
+60
+2520
+69720375229712477164533808935312303556800
+```
 ## python代码
+- 每个数如果被更小的数整除，则在list中记录被除数
 ```python
 if __name__ == "__main__":
     while True:
         try:
             N = int(input())
-            l = list(range(1,N+1))
-            for i in range(N):
+            l = list(range(1, N + 1))
+            for i in range0(N):
                 for j in range(i):
-                    if l[i]%l[j]==0:
-                        l[i]=int(l[i]/l[j])
+                    if l[i] % l[j] == 0:
+                        l[i] = int(l[i] / l[j])
             tmp = 1
             for i in range(N):
                 tmp *= l[i]
             print(tmp)
         except:
             break
-
 ```
